--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ p {
 /** Mobile first approach **/
 /** Header **/
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url("./assets/joyce-adams-small.jp2");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url("./assets/joyce-adams-small.jpg");
     background-color: rgb(109, 108, 108);
     background-size: cover;
     background-repeat: no-repeat;
